@@ -1,3 +1,7 @@
+2008-08-16  Neal H. Walfield  <neal@gnu.org>
+
+	* thread.h (thread_start_sp_ip): New function.
+
 2008-07-04  Neal H. Walfield  <neal@gnu.org>
 
 	* mutex.h (ss_mutex_lock): Only complain about a possible deadlock
